# spark-validation-main

./: .env.example  .gitignore  80  README.md  exec_logs.txt  pyproject.toml  requirements.txt
.pre_execution/xml/: Demo_validation1.xml
config/: framework.yaml
ds_exports/: Demo_validation5.xml
jobs/: Demo_validation1.py  Demo_validation5.py
migrations/: 003_classification_tables.sql
params/: PCS_ParameterSet. json.txt
reports/: validation_report.csv
runtime_overlays/CBS_INVM_CDC_PACKED/: report.json
runtime_overlays/CBS_INVM_CDC_PACKED/params/: CDC_INVM_ParameterSet.json  PCS_ParameterSet.json  Prm_Rej_ParamSet.json
scripts/: classify_queued_jobs.py  compare_datasets.py  run-all.sh  show-results.sh  start-executor.sh  start-infra.sh  start-poller.sh  stop-all.sh
src/: __init__.py  executor_runner.py  poller_runner.py  test_submit_job.py
src/app/api/: Dockerfile  package-lock.json  package.json
src/app/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
src/config/: framework.yaml
src/docker/: .env.example  Dockerfile.gateway  docker-compose.yml
src/docker/init_db/: 01_init_schema.sql  02_classification_schema.sql
src/docs/: ANALYZER.md  GVS_CHECKPOINTS.md  PREFECT.md  TECHNICAL_DQ_CHECKLIST.md
src/jobs/: STG_XTC_LD_TEST_JOB.py  STG_XTC_LD_TEST_JOB_v2.py
src/jobs/config/: __init__.py  base.yaml  dev.yaml  job_config_schema.py  prod.yaml  test.yaml
src/jobs/utils/: __init__.py  config_loader.py  logger.py  spark_builder.py  sql_templates.py  type_casting.py  udfs.py
src/validator/: __init__.py  config.py  models.py
src/validator/ai/: __init__.py  config.py
src/validator/analyzer/: config.yaml  example_usage.py  intelligent_analyzer.py  main.py
src/validator/api/: main.py
src/validator/classifier/: __init__.py
src/validator/executor/: __init__.py  spark_executor.py
src/validator/logging/: __init__.py  backends.py  validation_logger.py
src/validator/monitoring/: __init__.py  health.py  metrics.py
src/validator/orchestrator/: __init__.py  flow.py  prefect_flow.py
src/validator/pipeline/: __init__.py  context.py  runner.py
src/validator/queue/: __init__.py  concurrency.py  manager.py  rate_limiter.py
src/validator/results/: __init__.py  notifier.py  reporter.py  storage.py
tests/: test_queue_basic.py
utils/: udfs.py
(+193 files in other folders)
