[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-validator"
version = "0.1.0"
description = "Spark job validation and analysis framework for DataStage-to-Spark migrations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "xuym"}
]
keywords = ["spark", "validation", "datastage", "etl", "pyspark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",

    # AI providers
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "requests>=2.31.0",

    # Queue and async
    "redis>=5.0.0",

    # API Framework
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",

    # File watching
    "watchdog>=4.0.0",

    # Database
    "psycopg2-binary>=2.9.9",

    # Monitoring
    "prometheus-client>=0.19.0",

    # Workflow
    "prefect>=2.14.0",

    # Utilities
    "httpx>=0.26.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
# Command line entry points
validator-api = "validator.api.main:main"
validator-worker = "validator.workers.worker:main"

[project.urls]
Homepage = "https://github.com/xuym/spark-validator"
Repository = "https://github.com/xuym/spark-validator"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# ─────────────────────────────────────────────────
# Tool Configurations
# ─────────────────────────────────────────────────

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
